--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ python-decouple==3.1
 pytz==2018.4
 static3==0.7.0
 gunicorn==19.8.1
-psycopg2==2.7.4
+psycopg2-binary==2.7.5
 django_extensions==2.0.7
 django-test-without-migrations==0.6
